--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Ignore local Python virtual environment folder (this workspace has a venv in Capstone/)
 /Capstone/
+/venv/
 /.vscode/
 /ResearchFiles
 # Optional: common Python/OS noise (kept minimal)
